# door-opener

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.aarch64  README.md  flake.nix  shell.nix
.github/workflows/: aarch64-compile.yml  cross-compile.yml  rust.yml  tag-release.yml
CAD/: DoorButtonMount.ipt  Main.iam  PrimaryCase.ipt  ScanCover.ipt  ScanCoverMount.ipt
CAD/Logo/: Cover 68.dxf
CAD/OTS/Adafruit_Neopixel_Stick/: LED - SMD RGB (WS2812).ipt  NeoPixel Stick - 8 x WS2812 5050 RGB LED v2 (1).iam  NeoPixel Stick - 8 x WS2812 5050 RGB LED v2.ipt  NeoPixel Stick.iam  NeoPixel Stick.step  Solder Pads.ipt
CAD/OTS/Hiletgo_PN532_module/: NFC_MODULE_1.ipt  PN532_NFC_Assembly.iam  Pin Stand 2.54mm_1.ipt  QFN40 (6x6)_1.ipt  Switch_2_1.ipt  pin_my_1.ipt
CAD/OTS/Raspberry_Pi_3/: Component1.ipt  Component12.ipt  Component13.ipt  Component14.ipt  Component15.ipt  Component16.ipt  Component2.ipt  Component2_1.ipt  Component2_2.ipt  Component3.ipt  Component3_1.ipt  Component4.iam  Component4.ipt  Component4_1.iam  Component4_1.ipt  Component5.ipt  Component5_1.ipt  Component5_2.ipt  Component67.ipt  Component73.ipt  EDAC_1743_RJ45_TH v18.iam  Part133.ipt  Part143.ipt  Part83.ipt  Pin Header 20x2 TH Pitch 2.54mm v1.iam  Pin Header 2x2 TH Pitch 2.54mm v1.iam  SOP-3 2.5mm v3.ipt  SOP-3 v1.ipt  SOP-3_1.6mm.ipt  TSOP-2 4mm v2.ipt  TSOP-6 2mm v1.ipt  TSOP-6 3mm v3.ipt  USB-A-stack-1x2 v23.iam  USB-A-stack-1x2 v23_1.iam  back_shell.ipt  base.ipt  base_1.ipt  bcm2837 v8.ipt  bottom_lead.ipt  cap0402 v1.ipt  (+47 more)
CAD/OTS/Waveshare_4inch_LCD/: 40PIN-0_5SH_LCD_CONNECTOR.ipt  4INCH-HDMI-LCD-C_PCB.ipt  4INCH-HDMI-LCD-C_PCBA_ASM.iam  4INCH-TP-LCD.ipt  4inch-hdmi-lcd_c.iam  CORE.ipt  HDMI-CONNECTOR.ipt  HP2_0-4PIN-SMT-00.ipt  MICROPHONE_PLUG__RPI4MODELB_ASM.ipt  PIN.ipt  SMTSO-M2_5-8ET.ipt  TYPE-C_USB-9X3X6_5.ipt
CAD/OldVersions/: Main.0027.iam  PrimaryCase.0044.ipt  ScanCover.0005.ipt  ScanCoverMount.0003.ipt
CAD/References/: IMG_5183.xcf
OpenerApp/: Cargo.toml  index.html  package.json
OpenerApp-old/: vite.config.ts
OpenerApp-old/src-tauri/: tauri.conf.json
OpenerApp-v1/: tailwind.config.js
OpenerApp-v1/src/: main.tsx
OpenerApp-v1/src-tauri/: Cargo.toml
OpenerApp-v1/src/pages/: App.tsx
OpenerApp-v2/: Cargo.toml
OpenerApp-v2/src/auth/: mod.rs
OpenerApp-v2/src/gui/: mod.rs
OpenerApp-v2/src/hardware/: mod.rs
OpenerApp-v2/src/hardware/door/: lx16a.rs  mod.rs
OpenerApp-v3/: Cargo.toml
OpenerApp-v3/src/: main.rs
OpenerApp-v3/src/gui/: mod.rs
OpenerApp-v3/src/gui/vulkan_helpers/: devices.rs  mod.rs  swapchain.rs
OpenerApp/.cargo/: config
OpenerApp/src/: config.rs  main.rs
OpenerApp/src-tauri/src/: main.rs
OpenerApp/src/auth/: mod.rs
OpenerApp/src/components/Badge/: Badge.tsx
OpenerApp/src/gui/: background.rs  mod.rs  passport.rs  svg.rs
OpenerApp/src/gui/background/: fragment_shader.glsl  mod.rs  vertex_shader.glsl
OpenerApp/src/gui/passport/: mod.rs
OpenerApp/src/hardware/door/: lx16a.rs  mod.rs
OpenerApp/src/hardware/led/: mod.rs
OpenerApp/src/hardware/nfc/: mod-customparse.rs  mod-old.rs  mod.rs  parser.rs
OpenerApp/src/styles/: styles.css
ServoEmulator/: CMakeLists.txt  build.sh
ServoEmulator/src/: main.c
cad/v2/: BackPlate.ipt  BackPlate.step  BackPlate_v3.stl  BackPlate_v3.stp  BackPlate_v5.stp  BackPlate_v6.stp  BackPlate_v7.stp  Enclosure.ipt  Enclosure.step  Enclosure_v2.stl  Enclosure_v3.stl  Enclosure_v4.stp  Enclosure_v5.stp  Enclosure_v6.stp  Enclosure_v7.stp  door-opener-v2-enclosure.iam  door-opener-v2-enclosure.ipt
docs/: README.md
docs/hardware/: README.md
docs/hardware/v1/: README.md
docs/hardware/v2/: README.md  assembly.md
docs/software/: Install.md  LocalDevelopment.md  README.md  Setup.md
install/: .xinitrc  opener-app-wayland.service  opener-app.service  sway-opener-config
src/: camera.rs  config.rs  enums.rs  main.rs  timedvariable.rs  updater.rs  websocket.rs
src/auth/: mod.rs
src/gui/: background.rs  colors.rs  constants.rs  mod.rs  svg.rs  windows.rs
src/gui/font_engine/: mod.rs
src/gui/passport/: mod-old.rs  mod.rs
src/hardware/: mod.rs
src/hardware/door/: ada_pusher.rs  dummy.rs  lx16a.rs  mod.rs
src/hardware/led/: mod.rs
src/hardware/nfc/: mod.rs  parser.rs  structs.rs
