[package]
name = "openerapp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.14"
resvg = "0.46.0"
serialport = "4.8.1"
nfc1 = { version = "=0.6.0", default-features = false, features = [] }
# rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }

[target.'cfg(windows)'.dependencies]
# libnfc is not available on vcpkg, must use `vendored` feature
nfc1 = { version = "=0.6.0", default-features=false, features = [ "vendored" ] }
