[package]
name = "openerapp"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.14"
resvg = "0.47.0"
nfc1 = { version = "=0.7.1", default-features = false, features = [], optional = true }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
dotenvy = { git = "https://github.com/allan2/dotenvy.git", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
btleplug = { version = "0.12.0", optional = true }
uuid = "1.20.0"
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread", "fs"] }
async-trait = "0.1.89"
semver = "1.0.27"
async-tungstenite = { version = "0.34.0", features = ["tokio-runtime", "tokio-rustls-webpki-roots"] }
futures = "0.3.32"
self-replace = "1.5.0"
sentry = "0.47.0"

[target.'cfg(windows)'.dependencies]
# libnfc is not available on vcpkg, must use `vendored` feature
nfc1 = { version = "=0.7.1", default-features=false, features = [ "vendored" ], optional = true }

[lints.clippy]
pedantic = "deny"

# Required for Sentry Source Context
# See: https://docs.sentry.io/platforms/rust/source-context/
[profile.release]
debug = true

[features]
default = ["nfc_reader", "ada_pusher"]
nfc_reader = ["dep:nfc1"]
ada_pusher = ["dep:btleplug"]
