[package]
name = "openerapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.4.4"
resvg = "0.28.0"
serialport = "4.3.0"
# nfc1 = { version = "0.5.2", default-features=false, features = [ ] }
# pn532 = { version = "0.3.2", features = ["std"] }
pn532 = "0.3.2"
rppal = { version = "0.17.1", features = ["hal"] }
# rs_ws281x = { git = "https://github.com/FizzyApple12/rpi-ws281x-rust.git" }
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10.63", features = ["vendored"] }